txt.txt
0
Traceback (most recent call last):
  File "check.py", line 14, in <module>
    compile(source,f,'exec')
  File "exec.py", line 1
    def helloWorld(name)
                       ^
SyntaxError: invalid syntax
